Implemented create and update features

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @task.title %></h1>
 <h2><%= @task.details %></h2>
 <h3><%= @task.completed %></h3>
+
+<%= link_to "Edit", update_task_path %>
+<%= link_to "Go back to all tasks", tasks_path %>
