--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,4 +3,10 @@
 <h3><%= @task.completed %></h3>
 
 <%= link_to "Edit", update_task_path %>
+
 <%= link_to "Go back to all tasks", tasks_path %>
+
+<%= link_to "Delete Task",
+            task_path(@task),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
