--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,20 @@
 <h1>My tasks</h1>
 
-<ul>
+<ul class="list-group">
   <% @tasks.each do |task|  %>
-    <li><%= link_to task.title, task_path(task) %></li>
+    <li class="list-group-item">
+      <% if task.completed %>
+        <i class="far fa-check-square"></i>
+      <% else %>
+        <i class="far fa-square"></i>
+      <% end %>
+      <%= link_to task.title, task_path(task) %>
+
+      <%= link_to task_path(task), method: :delete, data: { confirm: "Are you sure?" } do %>
+        <i class="fas fa-trash"></i>
+      <% end %>
+    </li>
   <% end %>
 </ul>
 
-<%= link_to "Create a new task", new_task_path %>
+<%= link_to "Create a new task", new_task_path, class: "btn btn-primary my-4" %>
