--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,3 @@
-<%= simple_form_for(@task) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :details %>
-  <%= f.input :completed %>
-  <%= f.submit %>
-<% end %>
+<h1>Create a new task</h1>
+
+<%= render "form", task: @task %>
